!30 merge 0.1.7 into develop
Co-authored-by: mudan_makeit<mudan2@huawei.com>
Co-authored-by: wuweizhi<weizhi.wu@huawei.com>
Co-authored-by: liangjianchang_makeit<liangjianchang1@huawei.com>
Co-authored-by: xiongjie_makeit<jerry.xiongjie@huawei.com>
Co-authored-by: ttming<tianmingyong@huawei.com>
Co-authored-by: gcw_HT4j1SG5<jeffrey.qiao@huawei.com>
Co-authored-by: gcw_WRViKsHy<leiwenqing@huawei.com>
Co-authored-by: kangquansheng_makeIT<Kangquansheng@huawei.com>
Co-authored-by: lideliang_makeit<lideliang5@huawei.com>
Co-authored-by: zhangjun_makeit<zhangjun220@huawei.com>
Co-authored-by: gallonH<hujialun1@huawei.com>
Co-authored-by: fuchenglin<fuchenglin1@huawei.com>
Co-authored-by: chenweizhao_makeit<chenweizhao1@huawei.com>
Co-authored-by: liyaoxuan_makeit<liyaoxuan2@huawei.com>
Co-authored-by: MapleLiu<liurongfeng1@huawei.com>
Co-authored-by: ttming<ttming@noreply.gitcode.com>
Co-authored-by: qq_40958463<qq_40958463@noreply.gitcode.com>



# message auto-generated for no-merge-commit merge:
!44 !30 merge 0.1.7 into develop

From: @tianmingyong 
Reviewed-by: @foreach1991, @xiongjie_makeit 


See merge request: openJiuwen/agent-core-java!44